# JPRC

./: .gitignore  ATRC.sln  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  create_lib.bat  loop.sh  msvs-dev-cmd.bat  quick.bat  run.sh  test.atrc  test2.atrc  test3.atrc  vs_run.bat
ATRC/: ATRC.cs  ATRC.csproj  ATRC.sln  ATRC.xml  ATRCFileData.cs  ATRCFiledata.cpp  BuildNupkg.bat  CMakeLists.txt  Filehandler.cs  Readme.md  atrc_stdlib.cpp  c.c  c_api.c  c_cpp.cpp  c_wrapper.cpp  core_dev.cpp  cpp.cpp  filehandler.cpp  filehandler2.cpp  usage.cpp
ATRC#/: README.md
ATRC#/ATRC/: Filehandler.cs
ATRC#/ATRC.Test/: file.atrc
ATRC++/: README.md  create_lib.bat  create_lib.sh  libs  msvs-dev-cmd.bat  run.sh
ATRC++/ATRC/: ATRCFiledata.cpp  CMakeLists.txt  InsertVar.c  atrc_stdlib.cpp  filehandler.cpp  usage.cpp
ATRC++/ATRC.Test/: ATRC.Test.cpp  run.bat  test.atrc  test.ini  teäåöst.atrc
ATRC++/ATRC/include/: ATRC.h  ATRC_stdlib.h  filer.h
ATRC++/ATRC/snippets/: DoesExist_var_key.cpp  DoesExist_var_key_block.cpp  InsertVar.c  InsertVar.cpp  IsPublic.cpp  ReadKey.cpp  ReadVariable.cpp
ATRC++/ATRC/snippets/to_save/: blocks.cpp  keys.cpp  variables.cpp
ATRC++/batch/: build.bat  globals.bat  msvs-dev-env.bat
ATRC++/libs-output/: ATRC.h  ATRC.lib
ATRC++/shell/: build.sh  globals.sh
ATRC-c_cpp/: README.md  build.bat  del.bat  msvs-dev-cmd.bat  msvs-dev-env.bat
ATRC-c_cpp/ATRC/: CMakeLists.txt  build.bat  main.c  main.cpp
ATRC-c_cpp/ATRC.Test/: ATRC.Test.cpp  ATRC.Test.h  CMakeLists.txt  build.bat
ATRC-c_cpp/ATRC.Test/libs/: CMakeLists.txt
ATRC-c_cpp/ATRC/include/: ATRC.h
ATRC-c_cpp/ATRC/src/: Filehandler.cpp
ATRC-csharp/: quick.bat
ATRC-csharp/ATRC/: ATRCFileData.cs
ATRC-csharp/ATRC.Test/: ATRC.Test.csproj  NuGet.config
ATRC.Test/: ATRC.Test.c  ATRC.Test.cpp  ATRC.Test.csproj  ATRC.Test.h  ATRC.Test.sln  CMakeLists.txt  Program.cs  README.txt  Run.bat  Run.sh  documentation.txt  example.atrc  file.atrc  test.atrc
ATRC/include/: ATRC.h  ATRC.hpp  ATRC_C.h  ATRC_COMMON.hpp  ATRC_CPP.hpp  ATRC_UTILS.h  DEV_INC.hpp  c.c  filer.h  legacy.h
ATRC/mem/: filehandler.cpp
ATRC/snippets/: DoesExist_var_key_block.cpp  InsertVar.cpp  IsPublic.cpp  ReadKey.cpp  ReadVariable.cpp
ATRC/snippets/to_save/: blocks.cpp  keys.cpp  variables.cpp
Wrappers/C#/: ATRCWrapperSolution.sln  README.md  example.atrc
Wrappers/C#/ATRC/: ATRC.cs  ATRC.csproj  Native.cs
Wrappers/C#/ATRCTest/: ATRCTest.csproj  Program.cs
Wrappers/C#/ATRCWrapper/: ATRC.cs  ATRCWrapper.csproj  Native.cs
Wrappers/C++/: README.md
Wrappers/C++/ATRC++/: ATRC.hpp
Wrappers/C++/include/: ATRC.hpp
Wrappers/Go/: .gitignore  atrc.go  go.mod
Wrappers/Go/example/: go.mod  main.go
batch/: build.bat  del.bat  msvs-dev-env.bat
cmake/: ATRCConfig.cmake  ATRCTargets.cmake  FindATRC.cmake  README.md  toolchain-linux-x64.cmake  toolchain-linux-x86.cmake  toolchain-macos-x64.cmake  toolchain-macos-x86.cmake  toolchain-windows-x64.cmake  toolchain-windows-x86.cmake
doc_compiler/: CMakeLists.txt
docs/: ATRC_C-CPP.hhc  ATRC_C-CPP.hhk  ATRC_C-CPP.hhp  ATRC_C-CPP.html  advanced_features.md  api_reference.htm  api_reference.html  c_api.md  cpp_api.md  create_compiled_html.bat  docs.md  error_logs.md  index.htm  index.html  installation_guide.htm  installation_guide.html  macros_constants.md  preprocessor.md  stdlib_api.md  styles.css  syntax.md
project/: .TODO  BUILDNUMBER  CHANGELOG  ROADMAP
scripts/: README.txt  build_and_package.bat  build_cs.bat  build_linux.sh  build_windows.bat  compile_docs.bat  fullbuild.bat  global.bat  loop.sh  run_test.bat
shell/: build.sh
wrapper/: ATRCWrapper.hpp  lib_copy.bat
wrapper/C#/: ATRC.csproj  ATRCWrapper.cs  ATRCWrapper.csproj  make.bat
wrapper/C#/ATRC.Core/: ATRC.Core.csproj  ATRC.cs
wrapper/C#/ATRC.Test/: ATRC.Test.csproj  Program.cs
